@@ -1,3 +1,10 @@
+TAG: homologyload-tr11886-19
+DATE:02/27/2015
+STAFF: sc
+CHANGES: HGNC/HG hybrid homology
+1) preprocessHybrid.py - change property values
+2) write temp report for Sue
+
 TAG: homologyload-tr11886-18
 DATE:02/17/2015
 STAFF: sc
